--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   bloc_test: ^9.1.4
   provider: ^6.0.5
+  rxdart: ^0.27.7
   # Value equality
   equatable: ^2.0.5
   # Remote API
@@ -26,8 +27,6 @@ dependencies:
   global_configs: ^1.1.2
   # Media
   assets_audio_player: ^3.1.1
-  # UI
-  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -42,3 +41,25 @@ flutter:
   
   assets:
   - config/
+
+  fonts:
+  - family: Montserrat
+    fonts:
+      - asset: fonts/Montserrat/Montserrat-Black.ttf
+      - asset: fonts/Montserrat/Montserrat-BlackItalic.ttf
+      - asset: fonts/Montserrat/Montserrat-Bold.ttf
+      - asset: fonts/Montserrat/Montserrat-BoldItalic.ttf
+      - asset: fonts/Montserrat/Montserrat-ExtraBold.ttf
+      - asset: fonts/Montserrat/Montserrat-ExtraBoldItalic.ttf
+      - asset: fonts/Montserrat/Montserrat-ExtraLight.ttf
+      - asset: fonts/Montserrat/Montserrat-ExtraLightItalic.ttf
+      - asset: fonts/Montserrat/Montserrat-Italic.ttf
+      - asset: fonts/Montserrat/Montserrat-Light.ttf
+      - asset: fonts/Montserrat/Montserrat-LightItalic.ttf
+      - asset: fonts/Montserrat/Montserrat-Medium.ttf
+      - asset: fonts/Montserrat/Montserrat-MediumItalic.ttf
+      - asset: fonts/Montserrat/Montserrat-Regular.ttf
+      - asset: fonts/Montserrat/Montserrat-SemiBold.ttf
+      - asset: fonts/Montserrat/Montserrat-SemiBoldItalic.ttf
+      - asset: fonts/Montserrat/Montserrat-Thin.ttf
+      - asset: fonts/Montserrat/Montserrat-ThinItalic.ttf
